--- a/package.json
+++ b/package.json
@@ -9,15 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.536.0",
-    "next": "15.4.5",
-    "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -37,7 +28,19 @@
     "@tanstack/react-query": "^5.67.2",
     "@tanstack/react-query-devtools": "^5.67.2",
     "class-variance-authority": "^0.7.1",
-    "react-feather": "^2.0.10"
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.536.0",
+    "moment": "^2.30.1",
+    "next": "15.4.5",
+    "next-themes": "^0.4.6",
+    "query-string": "^9.2.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-feather": "^2.0.10",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
