--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query-devtools": "^5.67.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
     "moment": "^2.30.1",
     "next": "15.4.5",
