manager dashboard is added

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "socket": "node socket-server.js",
+    "dev:full": "concurrently \"npm run dev\" \"npm run socket\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -41,6 +43,8 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-feather": "^2.0.10",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
@@ -53,6 +57,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/socket.io": "^3.0.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
