--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.67.2",
     "@tanstack/react-query-devtools": "^5.67.2",
     "class-variance-authority": "^0.7.1",
@@ -38,6 +38,7 @@
     "moment": "^2.30.1",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "query-string": "^9.2.2",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
